// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Filter: <ApplyButton /> should handle clicks 1`] = `
<SurroundPortals
  portalName="filter.apply-button"
  portalProps={
    {
      "disabled": false,
      "onClick": [MockFunction],
      "widgetSettings": {},
    }
  }
>
  <Button
    color="primary"
    disabled={false}
    fullWidth={true}
    onClick={[MockFunction]}
    size="small"
    testId="applyFilterButton"
    variant="contained"
  >
    <Text
      string="filter.view_results"
    />
  </Button>
</SurroundPortals>
`;

exports[`Filter: <ApplyButton /> should render as activated 1`] = `
<SurroundPortals
  portalName="filter.apply-button"
  portalProps={
    {
      "disabled": false,
      "onClick": [Function],
      "widgetSettings": {},
    }
  }
>
  <Button
    color="primary"
    disabled={false}
    fullWidth={true}
    onClick={[Function]}
    size="small"
    testId="applyFilterButton"
    variant="contained"
  >
    <Text
      string="filter.view_results"
    />
  </Button>
</SurroundPortals>
`;

exports[`Filter: <ApplyButton /> should render as deactivated 1`] = `
<SurroundPortals
  portalName="filter.apply-button"
  portalProps={
    {
      "disabled": true,
      "onClick": [Function],
      "widgetSettings": {},
    }
  }
>
  <Button
    color="primary"
    disabled={true}
    fullWidth={true}
    onClick={[Function]}
    size="small"
    testId="applyFilterButton"
    variant="contained"
  >
    <Text
      string="filter.view_results"
    />
  </Button>
</SurroundPortals>
`;
